Restyle navigation chrome with translucent gradient

--- a/frontend/group_dashboard.html
+++ b/frontend/group_dashboard.html
@@ -18,7 +18,7 @@
 </head>
 <body class="bg-gradient-to-b from-indigo-50 to-white">
     <div class="flex min-h-screen">
-        <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto"></nav>
+        <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Group Dashboard</h1>
             <p class="mb-4">Review group spending by month and year to see how different areas of your budget change over time.</p>
