--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,27 +28,105 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto shadow"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <section class="mb-8" data-no-card="true">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                    <div class="relative rounded-lg overflow-hidden shadow">
-                        <div id="landing-carousel" class="w-full h-72 md:h-96 relative">
-                            <img src="laptop.png" alt="Laptop illustration" class="absolute inset-0 w-full h-full object-cover transition-all duration-700 opacity-100 translate-x-0">
-                            <img src="coin_flower.png" alt="Coin plant illustration" class="absolute inset-0 w-full h-full object-cover transition-all duration-700 opacity-0 translate-x-full">
-                            <img src="wallet.svg" alt="Wallet icon" class="absolute inset-0 w-full h-full object-cover transition-all duration-700 opacity-0 translate-x-full">
+                <div class="relative overflow-hidden rounded-3xl bg-gradient-to-br from-slate-950 via-indigo-700 to-sky-600 text-white shadow-2xl">
+                    <div class="absolute -top-24 -left-16 h-64 w-64 rounded-full bg-white/10 blur-3xl"></div>
+                    <div class="absolute -bottom-16 -right-10 h-56 w-56 rounded-full bg-white/10 blur-3xl"></div>
+                    <div class="relative grid gap-12 p-8 md:grid-cols-2 md:p-12 items-center">
+                        <div class="flex flex-col space-y-6">
+                            <span class="inline-flex items-center gap-2 self-start rounded-full border border-white/30 bg-white/10 px-4 py-1 text-xs font-semibold uppercase tracking-widest text-indigo-100">
+                                <i class="fas fa-star text-indigo-100" aria-hidden="true"></i>
+                                Finance intelligence at a glance
+                            </span>
+                            <h1 class="text-4xl font-semibold leading-tight md:text-5xl">Command your cashflow with clarity in <span id="landing-site-name">Finance Manager</span></h1>
+                            <p class="text-lg text-indigo-100">Transform every transaction into insight. Finance Manager unifies accounts, budgets and forecasts so you can react fast, stay compliant and keep every £ working towards your goals.</p>
+                            <div class="flex flex-wrap gap-3">
+                                <a href="upload.html" class="inline-flex items-center justify-center rounded-full bg-white px-6 py-3 text-base font-semibold text-indigo-700 shadow-lg transition hover:-translate-y-0.5 hover:bg-indigo-50" aria-label="Get started by uploading transactions">
+                                    Get Started
+                                </a>
+                                <a href="monthly_dashboard.html" class="inline-flex items-center justify-center rounded-full border border-white/60 bg-white/10 px-6 py-3 text-base font-semibold text-white transition hover:-translate-y-0.5 hover:bg-white/20" aria-label="View dashboards">
+                                    Explore Dashboards
+                                </a>
+                                <a href="projects_board.html" class="inline-flex items-center justify-center rounded-full bg-indigo-900/40 px-6 py-3 text-base font-semibold text-white shadow-inner transition hover:-translate-y-0.5 hover:bg-indigo-900/60" aria-label="Open the projects board">
+                                    View Projects
+                                </a>
+                            </div>
+                            <dl class="grid grid-cols-1 gap-4 pt-6 text-left sm:grid-cols-3">
+                                <div class="rounded-2xl bg-white/10 p-4 shadow-lg">
+                                    <dt class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Managed balance</dt>
+                                    <dd class="mt-1 text-3xl font-semibold">£1.8m</dd>
+                                    <dd class="mt-1 text-sm text-indigo-100 opacity-80">Across linked accounts</dd>
+                                </div>
+                                <div class="rounded-2xl bg-white/10 p-4 shadow-lg">
+                                    <dt class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Transactions tracked</dt>
+                                    <dd class="mt-1 text-3xl font-semibold">120k+</dd>
+                                    <dd class="mt-1 text-sm text-indigo-100 opacity-80">Auto-tagged with AI</dd>
+                                </div>
+                                <div class="rounded-2xl bg-white/10 p-4 shadow-lg">
+                                    <dt class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Budgets on target</dt>
+                                    <dd class="mt-1 text-3xl font-semibold">92%</dd>
+                                    <dd class="mt-1 text-sm text-indigo-100 opacity-80">Refreshed every week</dd>
+                                </div>
+                            </dl>
                         </div>
-                        <div class="absolute inset-0 bg-gradient-to-br from-indigo-600/70 via-purple-500/60 to-sky-500/60 backdrop-blur-lg border border-white/30 rounded-3xl flex flex-col items-center justify-center text-center p-6">
-                            <h1 class="text-3xl md:text-4xl font-semibold mb-4 text-white">Welcome to <span id="landing-site-name">Finance Manager</span></h1>
-                            <p class="text-indigo-100 mb-4">Select an option from the menu to get started exploring your finances. Each section opens tools and dashboards that help you understand where your money goes.</p>
-                              <a href="upload.html" class="inline-block bg-gradient-to-r from-indigo-500 via-purple-500 to-sky-500 text-white font-medium px-6 py-2 rounded-full shadow-lg hover:from-indigo-400 hover:to-sky-400">Get Started</a>
-                        </div>
-                    </div>
-                    <div class="relative rounded-lg overflow-hidden shadow h-72 md:h-96">
-                        <img src="coin_flower.png" alt="Coin plant illustration" class="absolute inset-0 w-full h-full object-cover">
-                        <div class="absolute inset-0 bg-gradient-to-br from-slate-900/50 to-slate-700/30 backdrop-blur flex items-center justify-center p-6 text-center">
-                            <p class="text-white text-2xl">Track savings effortlessly</p>
+                        <div class="relative">
+                            <div class="absolute -top-10 -left-10 h-32 w-32 rounded-full bg-white/10 blur-3xl"></div>
+                            <div class="relative overflow-hidden rounded-3xl border border-white/30 bg-white/10 shadow-2xl">
+                                <div id="landing-carousel" class="relative h-72 w-full md:h-[28rem]">
+                                    <img src="laptop.png" alt="Laptop illustration" class="absolute inset-0 h-full w-full object-cover transition-all duration-700 opacity-100 translate-x-0">
+                                    <img src="coin_flower.png" alt="Coin plant illustration" class="absolute inset-0 h-full w-full object-cover transition-all duration-700 opacity-0 translate-x-full">
+                                    <img src="wallet.svg" alt="Wallet icon" class="absolute inset-0 h-full w-full object-cover transition-all duration-700 opacity-0 translate-x-full">
+                                </div>
+                                <div class="absolute inset-x-0 bottom-0 space-y-3 bg-gradient-to-t from-slate-950/80 via-slate-900/40 to-transparent p-6">
+                                    <div class="flex items-center gap-3">
+                                        <span class="inline-flex h-11 w-11 items-center justify-center rounded-full bg-white/10">
+                                            <i class="fas fa-shield-alt text-lg text-white" aria-hidden="true"></i>
+                                        </span>
+                                        <div>
+                                            <p class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Status</p>
+                                            <p class="text-lg font-semibold">All systems operational</p>
+                                        </div>
+                                    </div>
+                                    <a href="report.html" class="group inline-flex items-center justify-between rounded-2xl bg-white/90 px-4 py-3 text-sm font-semibold text-slate-900 shadow-lg transition hover:-translate-y-0.5 hover:bg-white" aria-label="Generate a live report">
+                                        <span>Generate a live report</span>
+                                        <span class="rounded-full bg-slate-100 p-2 text-slate-500 transition group-hover:bg-indigo-50 group-hover:text-indigo-600">
+                                            <i class="fas fa-arrow-right" aria-hidden="true"></i>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <p id="version" class="text-gray-500 mt-2 text-center">Version: loading...</p>
+                <div class="mt-6 grid grid-cols-1 gap-4 md:grid-cols-3">
+                    <a href="ai_tags.html" class="group flex items-center justify-between rounded-2xl bg-white p-5 shadow-lg transition hover:-translate-y-1 hover:shadow-xl" aria-label="Tune AI tagging rules">
+                        <div>
+                            <p class="text-xs font-semibold uppercase tracking-wide text-indigo-600">Automation</p>
+                            <p class="mt-1 text-sm text-gray-700">Fine-tune AI tags to keep categories consistent.</p>
+                        </div>
+                        <span class="rounded-full bg-indigo-50 p-3 text-indigo-500 transition group-hover:bg-indigo-100">
+                            <i class="fas fa-magic text-xl" aria-hidden="true"></i>
+                        </span>
+                    </a>
+                    <a href="budgets.html" class="group flex items-center justify-between rounded-2xl bg-white p-5 shadow-lg transition hover:-translate-y-1 hover:shadow-xl" aria-label="Review your budgets">
+                        <div>
+                            <p class="text-xs font-semibold uppercase tracking-wide text-indigo-600">Budgets</p>
+                            <p class="mt-1 text-sm text-gray-700">See which targets are thriving and where to adjust.</p>
+                        </div>
+                        <span class="rounded-full bg-indigo-50 p-3 text-indigo-500 transition group-hover:bg-indigo-100">
+                            <i class="fas fa-bullseye text-xl" aria-hidden="true"></i>
+                        </span>
+                    </a>
+                    <a href="search.html" class="group flex items-center justify-between rounded-2xl bg-white p-5 shadow-lg transition hover:-translate-y-1 hover:shadow-xl" aria-label="Search transactions">
+                        <div>
+                            <p class="text-xs font-semibold uppercase tracking-wide text-indigo-600">Investigation</p>
+                            <p class="mt-1 text-sm text-gray-700">Drill into transactions with powerful filtering.</p>
+                        </div>
+                        <span class="rounded-full bg-indigo-50 p-3 text-indigo-500 transition group-hover:bg-indigo-100">
+                            <i class="fas fa-search text-xl" aria-hidden="true"></i>
+                        </span>
+                    </a>
+                </div>
+                <p id="version" class="mt-4 text-center text-gray-500">Version: loading...</p>
             </section>
 
             <section class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8 opacity-0 transition-opacity duration-700" data-no-card="true">
